--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=springdeployments
 #Database Setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/spd?createDatabaseIfNotExist=true
+spring.datasource.password=VGTIBYrAEAPJmnWQGceTCtzgVhiZHQvi
+spring.datasource.url=jdbc:mysql://root:VGTIBYrAEAPJmnWQGceTCtzgVhiZHQvi@caboose.proxy.rlwy.net:57045/railway?createDatabaseIfNotExist=true
 sprig.datasource.hikari.maximum-pool-size=10n
 
 
